# chat-bot

./: .env.scheme  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  test_chat_bot.db
alembic/: env.py
alembic/versions/: 001_add_summary_column.py
chat_bot/: database.py  main.py  routes.py
chat_bot/config/: __init__.py  settings.py
chat_bot/core/: __init__.py  constants.py  enums.py
chat_bot/document_processing/: __init__.py
chat_bot/document_processing/chunker/: document_chunker.py
chat_bot/document_processing/parser/: document_parser.py
chat_bot/document_processing/parser/parsers/: __init__.py  base_parser.py  pdf_parser.py  txt_parser.py
chat_bot/models/: __init__.py  document.py
chat_bot/schemas/: __init__.py  chat.py  common.py  document.py  health.py
chat_bot/services/: __init__.py  chat_service.py  document_service.py  pg_document_service.py
chat_bot/services/openai_service/: __init__.py  chat_service.py  summarization.py
chat_bot/services/openai_service/rag_agent/: __init__.py  rag_agent.py  state.py  tools.py
chat_bot/services/openai_service/rag_agent/nodes/: __init__.py  answer_generation.py  moderation.py  relevance.py
chat_bot/utils/: __init__.py  file_handler.py
templates/: chat.html  home.html  upload.html
tests/: __init__.py  conftest.py  test_chat_service.py  test_document_processing.py  test_document_service.py  test_document_upload.py  test_file_validation.py  test_health.py  test_integration.py  test_pg_document_service.py  test_routes.py
